# ai-drama-factory

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.api  Dockerfile.portal  PROJECT-CONTEXT.md  README.md  docker-compose.yml  setup.cfg
adapters/wan/: README.md
api/drama_factory_api/: __init__.py  journey.py  main.py
apps/portal/: package.json  tsconfig.json
apps/portal/app/: globals.css  layout.tsx  page.tsx
apps/portal/components/: candidate-actions.tsx  discussion-notes.tsx  document-editor.tsx  production-handoff.tsx
apps/portal/lib/: api.ts
docs/architecture/: ADR-000-project-principles.md  ADR-001-system-boundaries.md  ADR-002-shot-centric-production.md  ADR-003-artifact-lifecycle.md
docs/design/: V2.1-DESIGN-SPEC.md  V2.1-MIGRATION-PLAN.md  V2.1-OPEN-QUESTIONS.md  V2.1-SHOT-11-WALKTHROUGH.md
docs/implementation/: CREATIVE-JOURNEY-MVP.md  PORTAL-MVP.md  V2.1-A-CORE-METADATA.md  V2.1-A-SCHEMA-DECISIONS.md  V2.1-B-PROJECT-BOOTSTRAP.md  V2.1-C-SINGLE-SHOT-CANDIDATES.md  V2.1-D-REVIEW-AND-SELECTION.md  V2.1-E-CUT-MANIFEST-AND-ASSEMBLY.md
docs/roadmap/: ROADMAP.md
docs/vision/: MASTER-VISION.md
examples/: project-film-v1.md
examples/v2.1-minimal-project/: README.md  drama-factory.project.json
src/drama_factory/: __init__.py  bootstrap.py  cli.py  cuts.py  errors.py  ids.py  project.py  rendering.py  reviewing.py  time.py  validator.py
tests/: test_bootstrap.py  test_cli.py  test_path_safety.py  test_project_loading.py  test_review_selection.py  test_validation.py
tests/fixtures/: README.md
(+29 files in other folders)
