[metadata]
name = ai-drama-factory
version = 0.1.0
description = File-based metadata inspection and validation for AI Drama Factory

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    drama = drama_factory.cli:main
